--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -12,7 +12,10 @@
     "dev": {
       "name": "Start Dev Server",
       "command": "yarn dev",
-      "runAtStart": true
+      "runAtStart": true,
+      "preview": {
+        "port": 3000
+      }
     },
     "build": {
       "name": "Build",
@@ -26,7 +29,8 @@
         "files": [
           "package-lock.json"
         ],
-        "branch": false
+        "branch": false,
+        "resume": false
       }
     },
     "sobremi2.astro": {
